# rs-ecommerce

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  build.rs  compose.yaml  docker-compose.yml  rustfmt.toml
.serena/: project.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs  pb.rs
crates/app/src/auction/: mod.rs  service.rs  status.rs
crates/app/src/audit/: service.rs
crates/app/src/cart/: mod.rs  service.rs
crates/app/src/identity/: mod.rs  repository.rs  service.rs  status.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: cli.rs  env.rs  lib.rs  telemetry.rs
crates/workers/customer-sync-worker/: Cargo.toml
crates/workers/customer-sync-worker/src/: main.rs
crates/workers/inventory-worker/: Cargo.toml
crates/workers/inventory-worker/src/: main.rs
docs/: README.md
docs/api/: auth.md  connectrpc.md  connectrpc_examples.md
docs/architecture/: auth_ui.md  customers.md  db_schema.md  identity.md  inventory_management.md  inventory_reservation.md  multi_store.md  multi_store_sync.md  overview.md  proto_organization.md
docs/dev/: setup.md
docs/features/: _template.md
docs/features/auction/: api.md  overview.md
docs/features/cart/: api.md  overview.md
docs/features/catalog/: api.md  overview.md
docs/features/order/: api.md  overview.md
docs/features/product/: api.md  overview.md
docs/features/promotion/: api.md  overview.md
docs/features/setup/: api.md  login_ui_spec.md  overview.md  ui_spec.md
docs/features/store_settings/: api.md  form_spec.md  overview.md  schema.md
docs/operations/: audit_log.md  logging.md
frontend/admin-ui/: package-lock.json  package.json
frontend/storefront-ui/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
migrations/: 00000000000000_init.sql  00000000000001_store_settings.sql  00000000000002_audit_log.sql  00000000000003_store_staff.sql  00000000000004_staff_permissions.sql  00000000000006_catalog_inventory_v2.sql  00000000000007_multi_store.sql  00000000000008_customers.sql  00000000000009_add_product_tax_rule.sql  00000000000010_store_code.sql  00000000000011_product_variant_axes.sql  00000000000012_drop_store_location_metadata.sql  00000000000013_outbox_customer_sync.sql  00000000000014_add_audit_permission.sql  00000000000015_store_staff_role_id.sql  00000000000016_staff_display_invite.sql  00000000000018_store_timezone.sql  00000000000019_cart_sku.sql  00000000000020_auction.sql  00000000000021_audit_store_id.sql  00000000000022_remove_auction_tenant.sql  00000000000023_auction_sku_id.sql  00000000000024_auction_title_description.sql  00000000000025_store_auction_participation_rules.sql  00000000000026_store_staff_sessions.sql  00000000000027_store_staff_refresh_tokens.sql  00000000000028_customer_country_code.sql  00000000000029_store_settings_payment_methods.sql  00000000000030_store_settings_storage.sql  00000000000031_split_store_settings.sql  00000000000032_sku_images.sql  00000000000033_storage_public_private.sql  00000000000034_digital_assets.sql  00000000000035_drop_store_storage_settings.sql  00000000000036_auction_auto_bids.sql  00000000000037_add_auction_permissions.sql  00000000000038_drop_auction_settings.sql
proto/ecommerce/v1/: auction.proto  audit.proto  auth.proto  backoffice.proto  common.proto  customer.proto  identity.proto  permissions.proto  setup.proto  store_settings.proto  store_staff.proto  storefront.proto
scripts/: seed_store.sql
src/: main.rs
src/auction/: mod.rs  service.rs
src/audit/: mod.rs  service.rs
src/cart/: error.rs  mod.rs  service.rs
src/catalog/: domain.rs  service.rs
src/customer/: error.rs  mod.rs  service.rs
src/domain/: mod.rs  status.rs  validation.rs
src/identity/: context.rs  error.rs  mod.rs  repository.rs  service.rs
src/infrastructure/: audit.rs  db.rs  email.rs  metafields.rs  mod.rs  outbox.rs  search.rs
src/order/: mod.rs  service.rs
src/product/: digital.rs  domain.rs  media.rs  mod.rs  service.rs
src/promotion/: mod.rs  service.rs
src/rpc/: actor.rs  auction.rs  audit.rs  backoffice.rs  customer.rs  identity.rs  json.rs  mod.rs  permissions.rs  request_context.rs  session.rs  setup.rs  store_settings.rs  storefront.rs
src/setup/: service.rs
src/shared/: audit_action.rs  audit_helpers.rs  ids.rs  mod.rs  money.rs  status.rs  time.rs  validation.rs
src/store_settings/: locations.rs  mod.rs  repository.rs  service.rs  shipping.rs  tax.rs
(+157 files in other folders)
