[package]
name = "rs-ecommerce"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
anyhow = "1"
prost = "0.12"
prost-types = "0.12"
pbjson = "0.6"
pbjson-types = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
meilisearch-sdk = "0.24"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
protoc-bin-vendored = "3"
pbjson-build = "0.6"
