[package]
name = "rs-ecommerce"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/common",
    "crates/workers/inventory-worker",
    "crates/workers/customer-sync-worker",
]

[dependencies]
axum = "0.7"
anyhow = "1"
prost = "0.12"
prost-types = "0.12"
pbjson = "0.6"
pbjson-types = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
meilisearch-sdk = "0.24"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.26"
opentelemetry = "0.25"
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.25", features = ["grpc-tonic"] }
rs-common = { path = "crates/common" }
jsonwebtoken = "9"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
argon2 = "0.5"
hex = "0.4"
sha2 = "0.10"
rand_core = "0.6"
tower-http = { version = "0.6", features = ["cors", "trace"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "rustls-tls"] }

[build-dependencies]
prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
protoc-bin-vendored = "3"
pbjson-build = "0.6"
