[package]
name = "rs-ecommerce-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
meilisearch-sdk = "0.24"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
rs-common = { path = "../common" }
